# nano-llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
nano_llm/tokenizer/: special_tokens.py  tokenizer.py
